# pixie-test

./: .gitignore  Cargo.toml  LICENSE  README.md
design/: SIPOC.md  charter.md
src/: main.rs
web/app/: package-lock.json  package.json
web/app/src/: App.js
web/app/src/components/CreateCampaign/: CreateCampaign.js
web/app/src/components/MetaMask/ConnectMetaMask/: ConnectMetaMask.js
web/app/src/components/MetaMask/MetaMaskAuth/: MetaMaskAuth.js
web/app/src/components/MetaMaskAuth/: MetaMaskAuth.js
web/app/src/components/Register/: Register.js
web/static/: index.html
