[package]
name = "pixie-test"
version = "0.1.0"
edition = "2021"
authors = ["Ian Johnson"]
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3"