[package]
name = "pixie-test"
version = "0.1.0"
edition = "2021"
authors = ["Ian Johnson"]
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { path = "../axum/axum" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }